sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:7: error: forward reference extends over definition of value i
			for (j <- 0 to i) {
                                       ^